--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
